tests/checker/diagnostics/0944_gadt_eval_bool_branch_mismatch_09.ml.infer.expected
File "0944_gadt_eval_bool_branch_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0944_gadt_eval_bool_branch_mismatch_09 is not a valid module name.

File "0944_gadt_eval_bool_branch_mismatch_09.ml", line 7, characters 19-20:
7 |   | Bool_iota b -> 8
                       ^
Error: The constant 8 has type int but an expression was expected of type
         a = bool
